web: consistent public API URLs

--- a/python/fatcat_web/templates/changelog.html
+++ b/python/fatcat_web/templates/changelog.html
@@ -37,11 +37,7 @@ inspect every change all the way back to the start.
 </table>
 
 <div style="float: right; font-size: smaller;">
-  {% if config.FATCAT_DOMAIN == "fatcat.wiki" %}
-    <a href="https://api.fatcat.wiki/v0/changelog">As JSON via API</a>
-  {% else %}
-    <a href="{{ config.FATCAT_API_HOST }}/changelog">As JSON via API</a>
-  {% endif %}
+  <a href="{{ config.FATCAT_PUBLIC_API_HOST }}/changelog">As JSON via API</a>
 </div>
 
 {% endblock %}
