--- a/python/fatcat_web/templates/entity_history.html
+++ b/python/fatcat_web/templates/entity_history.html
@@ -35,7 +35,7 @@ This table only shows <i>accepted</i> edits included in the catalog, not any wor
   {% endfor %}
 </table>
 <div style="float: right; font-size: smaller;">
-  <a href="{{ config.FATCAT_API_HOST }}/{{ entity_type }}/{{ entity.ident }}/history">As JSON via API</a>
+  <a href="{{ config.FATCAT_PUBLIC_API_HOST }}/{{ entity_type }}/{{ entity.ident }}/history">As JSON via API</a>
 </div>
 
 
