prefer contrib.creator.display_name over contrib.raw_name
These will be getting updates from ORCID and are usually more complete
and more correct for display, attribution, and search purposes.

Might need to tweak fuzzycat code to handle multiple names at the
verification stage.

--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -65,8 +65,8 @@
           <p style="font-size: larger;">
           {% if entity._authors and entity._authors != [] %} by
             {% for contrib in entity._authors[:12] %}
-              {% if contrib.creator_id %}
-                <b><a href="/creator/{{contrib.creator_id}}">{{ contrib.raw_name }}</a></b>{% if not loop.last %}, {% endif %}
+              {% if contrib.creator_id and contrib.creator and contrib.creator.display_name %}
+                <b><a href="/creator/{{contrib.creator_id}}">{{ contrib.creator.display_name }}</a></b>{% if not loop.last %}, {% endif %}
               {% else %}
                 {% if contrib.raw_name != None %}{{ contrib.raw_name }}{% else %}<i>Unknown</i>{% endif %}{% if not loop.last %}, {% endif %}
               {% endif %}
