fix 'colected' typos
Thanks for the catch martin

--- a/python/fatcat_web/templates/base.html
+++ b/python/fatcat_web/templates/base.html
@@ -158,7 +158,7 @@
     window.goatcounter = {
         /* title leaks search query, so don't report it */
         title: "",
-        {# to allow localhost connections (dev) to be colected, set: allow_local: true #}
+        {# to allow localhost connections (dev) to be collected, set: allow_local: true #}
     };
   </script>
   <script data-goatcounter="{{ config.GOATCOUNTER_ENDPOINT }}" async src="{{ config.GOATCOUNTER_SCRIPT_URL }}"></script>
