web: expand release creators in more situations

--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -402,7 +402,7 @@ accessible version.
 </div>
 </div>
 
-{{ entity_macros.fatcat_bits(entity, "release", "container,files,filesets,webcaptures", editgroup) }}
+{{ entity_macros.fatcat_bits(entity, "release", "container,creators,files,filesets,webcaptures", editgroup) }}
 
 </div>
 </div>
