web: fix edit form style guide links

--- a/python/fatcat_web/templates/entity_delete.html
+++ b/python/fatcat_web/templates/entity_delete.html
@@ -12,7 +12,7 @@
   <form class="ui form" id="delete_form" method="POST" action="{% if editgroup and editgroup.editgroup_id %}/editgroup/{{ editgroup.editgroup_id }}{% endif %}/{{ entity_type }}/{{ existing_ident }}/delete">
 {% endblock %}
 
-  <p>See <a href="https://guide.fatcat.wiki/entity_release.html">the catalog
+  <p>See <a href="https://guide.fatcat.wiki/style_guide.html">the catalog
   style guide</a> for schema notes, and <a
   href="https://guide.fatcat.wiki/editing_quickstart.html">the editing
   tutorial</a> if this is your first time making an edit.
