--- a/python/fatcat_web/templates/entity_edit_toml.html
+++ b/python/fatcat_web/templates/entity_edit_toml.html
@@ -12,9 +12,9 @@
 
 {% endblock %}
 
-  <p>See <a href="https://guide.fatcat.wiki/entity_release.html">the catalog
-  style guide</a> for schema notes, and <a
-  href="https://guide.fatcat.wiki/editing_quickstart.html">the editing
+  <p>See <a href="https://guide.fatcat.wiki/entity_{{ entity_type }}.html">the
+  catalog style guide</a> for schema notes, and
+  <a href="https://guide.fatcat.wiki/editing_quickstart.html">the editing
   tutorial</a> if this is your first time making an edit.
 
   {{ form.hidden_tag() }}
