Andrew W. Mellon Foundation

--- a/python/fatcat_web/templates/about.html
+++ b/python/fatcat_web/templates/about.html
@@ -90,8 +90,8 @@ a US-based non-profit digital library, well known for its
 lending services.
 
 <p>Development of Fatcat and related web harvesting, indexing, and preservation
-efforts at the Archive have been partially funded (for the 2018-2019 period) by
-a generous grant from the <b>Mellon Foundation</b>
+efforts at the Archive have been partially funded by
+a generous grant from the <b>Andrew W. Mellon Foundation</b>
 (<a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">"Long-tail Open Access Journal Preservation"</a>).
 Fatcat supports this work by both tracking which open access works are in known
 archives and providing minimum-viable indexing and access mechanisms for
