--- a/python/fatcat_web/templates/home.html
+++ b/python/fatcat_web/templates/home.html
@@ -102,7 +102,7 @@
         non-profit digital library dedicated to providing Universal Access to All Knowledge.
         <a href="https://archive.org/donate/">Donations welcome!</a>
         <p>Development for this project funding comes from
-        <b><a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">The Andrew Mellon Foundation</a></b>,
+        <b><a href="https://blog.archive.org/2018/03/05/andrew-w-mellon-foundation-awards-grant-to-the-internet-archive-for-long-tail-journal-preservation/">The Andrew W. Mellon Foundation</a></b>,
         specifically to capture "long-tail" open access works on
         the public web which might otherwise be lost.
       </div>
