web: bugfix dblp vs. doaj display logic

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -248,7 +248,7 @@
   {% if paper.doaj_id %}
     <a href="https://doaj.org/article/{{paper.doaj_id }}/" style="color: green;">doaj:{{ paper.doaj_id }}</a> &nbsp;
   {% endif %}
-  {% if paper.doaj_id %}
+  {% if paper.dblp_id %}
     <a href="https://dblp.org/rec/{{ paper.dblp_id }}.html" style="color: green;">dblp:{{ paper.dblp_id }}</a> &nbsp;
   {% endif %}
 
