web: fix spacing for doaj/dblp identifiers in SERP

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -228,7 +228,7 @@
   {% endif %}
 
   {# ### IDENTIFIERS #}
-  {% if paper.doi or paper.pmid or paper.arxiv_id or paper.jstor_id or paper.pmcid %}
+  {% if paper.doi or paper.pmcid or paper.pmid or paper.arxiv_id or paper.jstor_id or paper.doaj_id or paper.dblp_id %}
     <br>
   {% endif %}
   {% if paper.doi %}
