web: fix DOAJ article links (remove trailing slash)

--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -246,7 +246,7 @@
     <a href="https://jstor.org/stable/{{paper.jstor_id }}/" style="color: green;">jstor:{{ paper.jstor_id }}</a> &nbsp;
   {% endif %}
   {% if paper.doaj_id %}
-    <a href="https://doaj.org/article/{{paper.doaj_id }}/" style="color: green;">doaj:{{ paper.doaj_id }}</a> &nbsp;
+    <a href="https://doaj.org/article/{{paper.doaj_id }}" style="color: green;">doaj:{{ paper.doaj_id }}</a> &nbsp;
   {% endif %}
   {% if paper.dblp_id %}
     <a href="https://dblp.org/rec/{{ paper.dblp_id }}.html" style="color: green;">dblp:{{ paper.dblp_id }}</a> &nbsp;
