--- a/python/fatcat_web/templates/entity_macros.html
+++ b/python/fatcat_web/templates/entity_macros.html
@@ -303,7 +303,7 @@ yellow
     <div class="green bar" style="border-radius: 0; min-width: 0; width: {{ (frac_bright*100)|round(method='ceil') }}%;" title="bright: {{ "{:,}".format(stats.bright) }} ({{ (frac_bright*100)|round(2,method='ceil') }}%)">
       <div class="progress">{# {{ (frac_bright*100)|int }}% #}</div>
     </div>
-    <div class="green bar" style="border-radius: 0; min-width: 0; width: {{ (frac_dark*100)|round(method='ceil') }}%; background-color: darkgreen;" title="dark: {{ "{:,}".format(stats.dark) }} ({{ (frac_dark*100)|round(2,method='ceil') }}%">
+    <div class="green bar" style="border-radius: 0; min-width: 0; width: {{ (frac_dark*100)|round(method='ceil') }}%; background-color: darkgreen;" title="dark: {{ "{:,}".format(stats.dark) }} ({{ (frac_dark*100)|round(2,method='ceil') }}%)">
       <div class="progress">{# {{ (frac_dark*100)|int }}% #}</div>
     </div>
     {% if stats.shadows_only %}
