web: fix 'file' entity edit form links

--- a/python/fatcat_web/templates/file_edit.html
+++ b/python/fatcat_web/templates/file_edit.html
@@ -4,7 +4,7 @@
 {% block body %}
 
 {% block edit_form_prefix %}
-{{ edit_macros.edit_link_bar(entity_type, existing_ident) }}
+{{ edit_macros.edit_link_bar('file', existing_ident, 'form') }}
 <div class="ui segment">
 <h1 class="ui header">Edit File Entity</h1>
 
