--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -85,10 +85,9 @@
               {{ entity_tab("coverage", "Coverage", "/coverage") }}
             {% elif entity_type == "release" and entity.state != 'deleted' %}
               {{ entity_tab("contribs", "Authors", "/contribs", entity._authors|count ) }}
-              {{ entity_tab("references", "References", "/references", entity.refs|count) }}
               {% if  entity.state == 'active' %}
-                {{ entity_tab("inbound-refs", "Inbound", "/inbound-refs") }}
-                {{ entity_tab("outbound-refs", "Outbound", "/outbound-refs") }}
+                {{ entity_tab("refs-out", "References", "/refs/out") }}
+                {{ entity_tab("refs-in", "Cited By", "/refs/in") }}
               {% endif %}
             {% endif %}
             {{ entity_tab("metadata", "Metadata", "/metadata") }}
