--- a/python/fatcat_web/templates/entity_base.html
+++ b/python/fatcat_web/templates/entity_base.html
@@ -86,8 +86,8 @@
             {% elif entity_type == "release" and entity.state != 'deleted' %}
               {{ entity_tab("contribs", "Authors", "/contribs", entity._authors|count ) }}
               {% if  entity.state == 'active' %}
-                {{ entity_tab("refs-out", "References", "/refs/out") }}
-                {{ entity_tab("refs-in", "Cited By", "/refs/in") }}
+                {{ entity_tab("refs-out", "References", "/refs-out") }}
+                {{ entity_tab("refs-in", "Cited By", "/refs-in") }}
               {% endif %}
             {% endif %}
             {{ entity_tab("metadata", "Metadata", "/metadata") }}
